--- a/chat.html
+++ b/chat.html
@@ -3,19 +3,20 @@
 <html lang="en">
 
 <head>
-
 	<meta charset="UTF-8">
-
 	<title>Chat</title>
-
 	<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-
 	<script src="socket.io/socket.io.js"></script>
 	<link rel="stylesheet" href="_css/style.css">
-
+		<style>
+			.chat-messages{
+				trasition:font-size 1s;
+			}
+		</style>
 </head>
 
 <body>
+
 <!-- 	<div id="chat">
 		<form @submit.prevent = "sendMessage" >
 			<ul class="messageList">
@@ -37,26 +38,19 @@
 					Отвечаем сразу&nbsp;🙂
 				</div>
 			</div>
-			<template v-for="(message,index) in messages">
-				<template v-if="index==(messages.length-1)">
-					<div class="chat-messages" :class="message.class+'-block big-text'">
-						<div :class="'message-bubble '+message.class+'-message'">
-						{{message.message.trim()}}
-						</div>
-					</div>
-				</template>
-				<template v-else>
+			<div class="messages">
+			<template v-for="message in messages">
 					<div class="chat-messages" :class="message.class+'-block'">
 						<div :class="'message-bubble '+message.class+'-message'">
-						{{message.message}}
+						<span class="date" style="float:left">{{message.date}}</span> {{message.message}}
 						</div>
 					</div>
-				</template>
 			</template>
+		</div>
 				<form @submit.prevent = "sendMessage">
 					<div class="message-editor">
 					<div class="avatar user-avatar"></div>
-					<textarea v-on:keyup.enter.stop.prevent="sendMessage" placeholder="Место для вопроса" v-model:value="message" style="color: rgb(0, 0, 0);"></textarea>
+					<textarea v-on:keypress.enter.stop.prevent="sendMessage" placeholder="Место для вопроса" v-model:value="message" style="color: rgb(0, 0, 0);"></textarea>
 				</div>
 				</form>
 		</div>
@@ -77,9 +71,13 @@
 			methods:{
 				sendMessage:function(){
 					if (this.message.trim()!=='') {
+						let d= new Date();
 						socket.emit('message',{
 							message:this.message.trim(),
-							owner:this.userID})
+							owner:this.userID,
+							date: d.getHours()+':'+ d.getMinutes(),
+							for:777
+						})
 						this.message='';	
 					}
 					else 
@@ -99,8 +97,16 @@
 						message.class='user';
 					else 
 						message.class='princess-furniture';
-					app.messages.push(message);
-				}),
+					if ( message.owner==app.userID || message.for==app.userID) {
+						app.messages.push(message);
+						let last = document.querySelector('.chat-messages:last-child');
+						if (last!==null && last!=='undefined') 
+							last.classList.remove('big-text');
+						app.$nextTick(function(){
+							document.querySelector('.chat-messages:last-child').classList.add('big-text');
+						})
+					}
+				}), 
 				socket.on('connected', function(message)
 				{
 					app.connected++;
